[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asakpy"
version = "1.0.0"
authors = [
    { name = "for_the_zero", email = "forthezero@outlook.com" }
]
description = "Auto select API Key"
readme = "htps://github.com/for-the-zero/asak"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "openai>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/for-the-zero/asak"
BugTracker = "https://github.com/for-the-zero/asak/issues"

[tool.setuptools.packages.find]
where = ["."]